--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxt-starter",
+  "name": "stretch",
   "version": "1.0.0",
-  "description": "Nuxt SPA starter pack with Pug, Axios, and BootstrapVue",
+  "description": "App that counts duration and repitions when doing stretches or exercises",
   "author": "Ganesh Rao",
   "private": true,
   "scripts": {
@@ -30,5 +30,8 @@
     "node-sass": "^4.13.0",
     "prettier": "^1.16.4",
     "sass-loader": "^8.0.0"
+  },
+  "dependencies": {
+    "vuex-map-fields": "^1.3.6"
   }
 }
