--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "devDependencies": {
-    "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "nuxt": "^2.0.0",
@@ -29,9 +28,7 @@
     "eslint-plugin-pug": "^1.1.1",
     "node-sass": "^4.13.0",
     "prettier": "^1.16.4",
-    "sass-loader": "^8.0.0"
-  },
-  "dependencies": {
+    "sass-loader": "^8.0.0",
     "vuex-map-fields": "^1.3.6"
   }
 }
